opam-version: "1.2"
maintainer:   "noreply@example.com"
authors:      ["Joe Hill"]
homepage:     "https://github.com/cfcs/mirage-framebuffer"
bug-reports:  "https://github.com/cfcs/mirage-framebuffer/issues"
dev-repo:     "https://github.com/cfcs/mirage-framebuffer.git"
license:      "gopher://license.to.chill"
tags: "org:mirage"

build: [
  [ "dune" "subst"] {pinned}
  [ "dune" "build" "-p" name "-j" jobs ]
]

depends: [
  "ocamlfind" {build}
  "dune"  {build & >= "1.0"}

  "fmt" {>= "0.8.4"}
  "imagelib" { >= "20171028" }
  "logs" { >= "0.5.0" }
  "lwt" {>= "3.1.0"}
  "mirage-framebuffer"
  "mirage-types-lwt" { >= "3.0.0" }
  "rresult"
]
available: [ocaml-version >= "4.04.2"]
