opam-version: "1.2"
maintainer:   "noreply@example.com"
authors:      ["Joe Hill"]
homepage:     "https://github.com/mirage/mirage-framebuffer"
bug-reports:  "https://github.com/mirage/mirage-framebuffer/issues"
dev-repo:     "https://github.com/mirage/mirage-framebuffer.git"
license:      "gopher://license.to.chill"
tags: "org:mirage"

build: [
  [ "jbuilder" "subst"] {pinned}
  [ "jbuilder" "build" "-p" name "-j" jobs ]
]

depends: [
  "ocamlfind" {build}
  "jbuilder"  {build & >="1.0+beta9"}

  "cstruct"            { >= "1.9.0" }
  "fmt"                { >= "0.8.4" }
  "logs"               { >= "0.5.0" }
  "lwt"                { >= "3.1.0" & < "4.0.0" }
  "mirage-framebuffer"
  "mirage-logs"
  "mirage-types-lwt"   { >= "3.0.0" }
  "notty"              { >= "0.2.1" & <"3.0.0"}
  "rresult"            { >= "0.5.0" }
]
available: [ocaml-version >= "4.04.2"]
