opam-version: "1.2"
maintainer:   "noreply@example.com"
authors:      ["Joe Hill"]
homepage:     "https://github.com/mirage/mirage-framebuffer"
bug-reports:  "https://github.com/mirage/mirage-framebuffer/issues"
dev-repo:     "https://github.com/mirage/mirage-framebuffer.git"
license:      "gopher://license.to.chill"
tags: "org:mirage"

build: [
  [ "dune" "subst"] {pinned}
  [ "dune" "build" "-p" name "-j" jobs ]
]

depends: [
  "ocamlfind" {build}
  "dune"  {build & >= "1.0"}

  "cstruct"            { >= "1.9.0" }
  "fmt"                { >= "0.8.4" }
  "logs"               { >= "0.5.0" }
  "lwt"                { >= "4.1.0" & < "4.2.0" }
  "mirage-framebuffer"
  "mirage-logs"
  "mirage-types-lwt"   { >= "3.0.0" }
  "notty"              { >= "0.2.1" & <"3.0.0"}
  "rresult"            { >= "0.5.0" }
]
available: [ocaml-version >= "4.04.2"]
