opam-version: "1.2"
maintainer:   "noreply@example.com"
authors:      ["Joe Hill"]
homepage:     "https://github.com/mirage/mirage-framebuffer"
bug-reports:  "https://github.com/mirage/mirage-framebuffer/issues"
dev-repo:     "https://github.com/mirage/mirage-framebuffer.git"
license:      "gopher://license.to.chill"
tags: "org:mirage"

build: [
  [ "jbuilder" "subst"] {pinned}
  [ "jbuilder" "build" "-p" name "-j" jobs ]
]

depends: [
  "ocamlfind" {build & >= "1.7.0" }
  "jbuilder"  {build & >="1.0+beta9"}
  "cstruct" { >= "1.9.0" }
  "vchan-xen" { >= "3.0.0" }
  "xen-evtchn" {>= "2.0.0" }
  "xen-gnt" { >= "3.0.1" }
  "mirage-xen" { >= "3.0.6" }
  "lwt" {>= "3.1.0" & <"4.0.0"}
  "fmt" {>= "0.8.4"}
  "mirage-types-lwt" { >= "3.0.0" }
  "mirage-qubes" { >= "0.5" }
  "logs" { >= "0.5.0" }
  "io-page" { >= "2.0.1" }
  "mirage-framebuffer"
]
available: [ocaml-version >= "4.04.2"]
