opam-version: "2.0"
maintainer:   "noreply@example.com"
authors:      ["Joe Hill"]
homepage:     "https://github.com/mirage/mirage-framebuffer"
bug-reports:  "https://github.com/mirage/mirage-framebuffer/issues"
dev-repo:     "git+https://github.com/mirage/mirage-framebuffer.git"
license:      "gopher://license.to.chill"
tags: "org:mirage"

build: [
  [ "dune" "subst"] {pinned}
  [ "dune" "build" "-p" name "-j" jobs ]
]

depends: [
  "dune"  {build & >= "1.0"}
  "cstruct" { >= "1.9.0" }
  "fmt" {>= "0.8.4"}
  "io-page" { >= "2.0.1" }
  "logs" { >= "0.5.0" }
  "lwt" {>= "4.1.0" & < "4.2.0"}
  "mirage-framebuffer"
  "mirage-logs"
  "mirage-qubes" { >= "0.5" }
  "mirage-types-lwt" { >= "3.0.0" }
  "mirage-xen" { >= "3.0.6" }
  "vchan-xen" { >= "3.0.0" }
  "xen-evtchn" {>= "2.0.0" }
  "xen-gnt" { >= "3.0.1" }
  "ocaml"            { >= "4.04.2" }
]
