opam-version: "2.0"
synopsis:     "Provides the Vgr_mirage_framebuffer renderer backend for use with the Vg module"
maintainer:   "noreply@example.com"
authors:      ["Joe Hill"]
homepage:     "https://github.com/mirage/mirage-framebuffer"
bug-reports:  "https://github.com/mirage/mirage-framebuffer/issues"
dev-repo:     "git+https://github.com/mirage/mirage-framebuffer.git"
license:      "AGPL"
tags: "org:mirage"

build: [
  [ "dune" "subst"] {pinned}
  [ "dune" "build" "-p" name "-j" jobs ]
]

depends: [
  "ocamlfind" {build}
  "dune"  {build & >= "1.0"}

  "cstruct" { >= "1.9.0" }
  "fmt" { >= "0.8.4" }
  "logs" { >= "0.5.0" }
  "lwt" { >= "4.2.0" }
  "mirage-framebuffer"
  "mirage-logs"
  "mirage-types"     { >= "3.5.2" }
  "rresult"          { >= "0.5.0" }
  "vg"               { >= "0.9.2" & < "1.0.0" }
  "ocaml"            { >= "4.04.2" }
]
