opam-version: "1.2"
maintainer:   "noreply@example.com"
authors:      ["Joe Hill"]
homepage:     "https://github.com/cfcs/mirage-framebuffer"
bug-reports:  "https://github.com/cfcs/mirage-framebuffer/issues"
dev-repo:     "https://github.com/cfcs/mirage-framebuffer.git"
license:      "gopher://license.to.chill"
tags: "org:mirage"

build: [
  [ "jbuilder" "subst"] {pinned}
  [ "jbuilder" "build" "-p" name "-j" jobs ]
]

depends: [
  "ocamlfind" {build}
  "jbuilder"  {build & >="1.0+beta16"}
  "cstruct" { >= "3.1.1" }
  "lwt" {>= "3.1.0" & <"4.0.0"}
  "notty" {>= "0.2.1" & <"3.0.0"}
  "fmt" {>= "0.8.4"}
  "mirage-types-lwt" { >= "3.0.0" }
  "logs" { >= "0.6.2" }
  "mirage-logs" { >= "0.3.0" }
]
available: [ocaml-version >= "4.04.0"]
