opam-version: "2.0"
maintainer:   "noreply@example.com"
authors:      ["Joe Hill"]
homepage:     "https://github.com/cfcs/mirage-framebuffer"
bug-reports:  "https://github.com/cfcs/mirage-framebuffer/issues"
dev-repo:     "git+https://github.com/cfcs/mirage-framebuffer.git"
license:      "gopher://license.to.chill"
tags: "org:mirage"

build: [
  [ "dune" "subst"] {pinned}
  [ "dune" "build" "-p" name "-j" jobs ]
]

depends: [
  "dune"  {build & >= "1.0"}
  "cstruct"          { >= "3.1.1" }
  "fmt"              { >= "0.8.4"}
  "logs"             { >= "0.6.2" }
  "lwt"              { >= "4.1.0" & < "4.2.0"}
  "mirage-types-lwt" { >= "3.0.0" }
  "mirage-logs"      { >= "0.3.0" }
  "rresult"          { >= "0.5.0" }
  "ocaml"            { >= "4.04.2" }
]
