opam-version: "2.0"
maintainer:   "noreply@example.com"
authors:      ["Joe Hill"]
homepage:     "https://github.com/cfcs/mirage-framebuffer"
bug-reports:  "https://github.com/cfcs/mirage-framebuffer/issues"
dev-repo:     "git+https://github.com/cfcs/mirage-framebuffer.git"
license:      "gopher://license.to.chill"
tags: "org:mirage"
synopsis: "Mirage device implementation for mirage-framebuffer devices"

build: [
  [ "dune" "subst"] {pinned}
  [ "dune" "build" "-p" name "-j" jobs ]
]

depends: [
  "dune"  {build & >= "1.0"}
  "mirage"
  "mirage-types" { >= "3.0.0" }
  "rresult"          { >= "0.5.0" }
  "ocaml"            { >= "4.04.2" }
]
